--- a/ubuntu/conf/lamp/teste.html
+++ b/ubuntu/conf/lamp/teste.html
@@ -20,7 +20,7 @@
 		</head>
 		<body>
 			<h1>Teste da Linguagem HTML (HyperText Markup Language)</h1>
-			Autor: Robson Vaamonde<br>
+			Autor: jhuly<br>
 			Linkedin: <a href="https://www.linkedin.com/in/robson-vaamonde-0b029028/">Robson Vaamonde</a><br>
 			Site: <a href="procedimentosemti.com.br">procedimentosemti.com.br</a><br>
 			Facebook: <a href="facebook.com/ProcedimentosEmTI"> Procedimentos Em TI</a><br>
@@ -28,6 +28,6 @@
 			Instagram: <a href="https://www.instagram.com/procedimentoem/?hl=pt-br">Procedimentos Em TI</a><br>
 			YouTube: <a href="youtube.com/BoraParaPratica">Bora Para Pratica</a><br>
 			Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64x<br>
-			Editado por: Robson Vaamonde
+			Editado por: jhuly
 		</body>
 	</html>
